// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css complex nested media queries 1`] = `
"@media (max-width: 600px) {
  .css-1vjvce5 h1 {
    font-size: 1.4rem;
  }
}

@media (max-width: 400px), (max-height: 420px) {
  .css-1vjvce5 h1 {
    font-size: 1.1rem;
  }
}"
`;

exports[`css complex nested styles 1`] = `
".css-2ksolp {
  color: blue;
}

.css-2ksolp:hover {
  color: green;
}

.css-2ksolp:hover .name {
  color: amethyst;
}

.css-2ksolp:hover .name:focus {
  color: burlywood;
}

@media (min-width: 420px) {
  .css-2ksolp:hover .name:focus {
    color: rebeccapurple;
  }
}"
`;

exports[`css handles media query merges 1`] = `
".css-1mnte70 {
  color: darkslateblue;
  color: red;
  color: purple;
}

@media (min-width: 420px) {
  .css-1mnte70 {
    color: amethyst;
  }
}

@media (min-width: 640px) {
  .css-1mnte70 {
    color: rebeccapurple;
  }
}

@media (min-width: 960px) {
  .css-1mnte70 {
    color: burlywood;
  }
}

@media (min-width: 640px) {
  .css-1mnte70 {
    color: blue;
  }
}

@media (min-width: 640px) {
  .css-1mnte70 {
    color: aquamarine;
  }
}"
`;

exports[`css media queries with multiple nested selectors 1`] = `
".css-snkf7h {
  color: blue;
}

@media (max-width: 400px) {
  .css-snkf7h {
    color: green;
  }

  .css-snkf7h h1 {
    color: red;
  }

  .css-snkf7h span {
    color: red;
  }
}"
`;

exports[`css media query with nested selector with nested selector on root 1`] = `
".css-1hvbare span {
  color: blue;
}

@media (max-width: 400px) {
  .css-1hvbare {
    color: green;
  }

  .css-1hvbare span {
    color: red;
  }
}"
`;

exports[`css media query with nested selector without declarations on root 1`] = `
"@media (max-width: 400px) {
  .css-156bult {
    color: green;
  }

  .css-156bult span {
    color: red;
  }
}"
`;

exports[`css should allow a weird class containing & when pseudoclass appears in the selector group 1`] = `
".css-13p6h3h:hover,
.css-13p6h3h .t\\&t {
  background: blue;
}"
`;

exports[`css should allow for context selector being appended to an element type 1`] = `
"a.css-ciaq1 {
  background: blue;
}"
`;

exports[`css should allow for context selector being appended to an element type when pseudoclass appears in the selector group 1`] = `
".css-miigdc:hover,
a.css-miigdc {
  background: blue;
}"
`;
